# WAC

./: AACollisionGenerator.hpp  CMakeLists.txt  PTCorrelator.cpp  PTCorrelator.hpp  PTHistos.cpp  Read.Me.pages  set-WAC-PATH
Base/: AnalysisConfiguration.cpp  AnalysisConfiguration.hpp  BaseLinkDef.h  BidimGaussFitConfiguration.cpp  BidimGaussFitter.cpp  CMakeLists.txt  CanvasCollection.cpp  Collection.hpp  CollisionGeometry.cpp  CollisionGeometry.hpp  CollisionGeometryAnalyzer.cpp  CollisionGeometryAnalyzer.hpp  CollisionGeometryConfiguration.cpp  CollisionGeometryConfiguration.hpp  CollisionGeometryGenerator.cpp  CollisionGeometryGenerator.hpp  CollisionGeometryHistograms.cpp  CollisionGeometryHistograms.hpp  CollisionGeometryPlots.C  Event.cpp  Event.hpp  EventAnalyzerConfiguration.cpp  EventAnalyzerConfiguration.hpp  EventFilter.cpp  EventFilter.hpp  EventHistos.cpp  EventHistos.hpp  EventLoop.cpp  EventLoop.hpp  G2Width.C  GeneralizedGaussianConfiguration.cpp  GeneralizedGaussianConfiguration.hpp  GeneralizedGaussianProfile.cpp  GeneralizedGaussianProfile.hpp  GeneratorConfiguration.cpp  GeneratorConfiguration.hpp  GeometryMoments.cpp  GeometryMoments.hpp  GlobalAnalyzer.cpp  GlobalAnalyzer.hpp  (+73 more)
Blastwave/: BWModelConfiguration.cpp  BWModelConfiguration.hpp  BWModelEventGenerator.cpp  BWModelEventGenerator.hpp  CMakeLists.txt  RunBWModelSimulation.cpp
HadronGas/: CMakeLists.txt  Hadron.cpp  Hadron.hpp  HadronGas.cpp  HadronGas.hpp  HadronGasConfiguration.cpp  HadronGasConfiguration.hpp  HadronGasHistograms.cpp  HadronGasHistograms.hpp  HadronGasLinkDef.h  HadronGasParticleHistograms.cpp  HadronGasParticleHistograms.hpp  RunHadronGas.C
Pythia/: AACollisionGenerator.cpp  AACollisionGenerator.hpp  AACollisionPythiaGenerator.cpp  AACollisionPythiaGenerator.hpp  AACollisionReader.cpp  AACollisionReader.hpp  AACorrelator.hpp  CMakeLists.txt  GlobalPlots.C  HeavyIonConfiguration.cpp  HeavyIonConfiguration.hpp  PythiaConfiguration.hpp  PythiaEventGenerator.cpp  PythiaEventGenerator.hpp  PythiaEventReader.cpp  PythiaEventReader.hpp  PythiaLinkDef.h  PythiaPP7TeVPairsSanityCheck.C  RunAACollisionPythiaPtSimulation.cpp  RunAACollisionPythiaSimulation.cpp  RunPythiaGenerator.cpp  RunPythiaParallelEventGenerator.cpp  RunPythiaSimulation.cpp  RunPythiaSimulationPtCorrelation.cpp
WAC/WAC/: main.cpp
WAC/WAC.xcodeproj/: project.pbxproj
WAC/WAC.xcodeproj/project.xcworkspace/xcuserdata/claudeapruneau.xcuserdatad/: UserInterfaceState.xcuserstate
WAC/WAC.xcodeproj/xcuserdata/claudeapruneau.xcuserdatad/xcdebugger/: Breakpoints_v2.xcbkptlist
WacPythia/: AACollisionGenerator.hpp  CMakeLists.txt  PythiaConfiguration.cpp  PythiaEventGenerator.cpp  PythiaEventReader.cpp  PythiaEventReader.hpp  PythiaLinkDef.h  RunPythiaGlobalObservables.cpp  RunPythiaSimulationSingleParticles.cpp
